--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,74 @@
-body {
+*{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+} 
+  body {
   background-color: rgb(170, 201, 219);
+}
+
+/* Página de Login */
+.login-background{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-card{
+  display: flex;
+  padding: 20px;
+  border-radius: 0.5rem;
+  background-color: #c7e2ed;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: fit-content;
+}
+.login-content{
+  flex: 1;
+  width: 100%;
+}
+.login-content h2{
+  color: #254a6f;
+}
+.login-content-area{
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+.login-content-area label{
+  color: #254a6f;
+  font-size: small;
+}
+.login-content-area input[type=text], input[type=password]{
+  padding: 5px 10px;
+  border: none;
+  border-radius: 0.5rem;
+  margin-top: 5px;
+}
+.login-buttons{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  flex-direction: column;
+}
+.login-buttons input[type=submit]{
+  margin: 5px 0;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: #254a6f;
+  color: white;
+  cursor: pointer;
+}
+.login-buttons input[type=submit]:hover{
+  background-color: #fff;
+  color: #254a6f;
+  transform: translateY(-2px);
+  transition: 0.5s;
+}
+.login-buttons .fonte a{
+  color: #254a6f;
+  margin-top: 10px;
+  font-size: x-small;
 }
 
 /*# sourceMappingURL=styles.css.map */
