--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,4 +71,14 @@
   font-size: x-small;
 }
 
+/* Menu */
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #254a6f;
+  color: white;
+}
+
 /*# sourceMappingURL=styles.css.map */
